--- a/notebooks/HypothesisTesting.ipynb
+++ b/notebooks/HypothesisTesting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,6 +455,13 @@
     "# Testing the first hypothesis\n",
     "# 1.There are no risk differences across provinces \n",
     "analyze_results(f_statistic, p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the p-value, it can be said that thre are risk differences across provinces."
    ]
   },
   {
@@ -503,10 +510,63 @@
     }
    ],
    "source": [
-    "# Testing the second and third hypothesis\n",
-    "# 2. There are no risk differences between postal codes\n",
-    "# 3. There are no significant margin (profit) difference between zip codes \n",
+    "# Testing the second hypothesis\n",
+    "# 2. There are no risk differences between postal codes \n",
     "analyze_results(f_statistic, p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The null hypothesis which is there are no risk differences betweeb postal codes stands."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualizing the distribution of profit margin across PostalCodes\n",
+    "df['profit_margin'] = df['TotalPremium'] - df['TotalClaims']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing the third hypothesis\n",
+    "# 3. There are no significant margin (profit) difference between zip codes\n",
+    "statistic, p_value = perform_anova_margin(df, 'profit_margin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistic: 0.8707474893589257\n",
+      "P-value: 0.9976859758015036\n",
+      "Fail to reject the null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "analyze_results(statistic, p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The null hypothesis \"There are no significant margin (profit) difference between zip codes\" stands "
    ]
   },
   {
@@ -532,24 +592,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Statistic: 4.620553644548478\n",
-      "P-value: 0.009847554859932653\n",
-      "Reject the null hypothesis\n"
+      "Statistic: -0.296353891400699\n",
+      "P-value: 0.7669656471629474\n",
+      "Fail to reject the null hypothesis\n"
      ]
     }
    ],
    "source": [
     "# Testing the fouth hypothesis\n",
     "# 4.\tThere are not significant risk difference between Women and Men\n",
-    "f_statistic, p_value = perform_anova(df, 'TotalClaims', 'Gender')\n",
+    "f_statistic, p_value = test_risk_difference_gender(df)\n",
+    "# f_statistic, p_value = perform_anova(df, 'TotalClaims', 'Gender')\n",
     "analyze_results(f_statistic, p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is no significant risk difference between woman and men"
    ]
   }
  ],
