Updated statistical modeling

--- a/notebooks/StatisticalModeling.ipynb
+++ b/notebooks/StatisticalModeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,47 +45,161 @@
     "df = df.loc[:, df.isnull().sum() <= 5]\n",
     "# Drop rows with any NaN values\n",
     "df = df.dropna(axis=0, how='any')\n",
-    "# df = pd.get_dummies(df, drop_first=True)"
+    "# Remove duplicates\n",
+    "df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardize numerical features\n",
+    "scaler = StandardScaler()\n",
+    "df[['TotalPremium', 'TotalClaims']] = scaler.fit_transform(df[['TotalPremium', 'TotalClaims']])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = df.drop(['TotalClaims', 'StatutoryRiskType', 'StatutoryClass', 'Country', 'Language', 'CoverCategory','CoverGroup', 'CoverType'], axis=1)\n",
-    "y = df['TotalClaims']\t\t"
+    "df.isnull().sum().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22002112"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X.size"
+    "# Identify all categorical columns (dtype 'object')\n",
+    "categorical_cols = df.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "# Convert all categorical variables to numeric using One-Hot Encoding\n",
+    "df = pd.get_dummies(df, columns=categorical_cols, drop_first=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Data Size: 998652\n",
+      "Sampled Training Set Size: 10000\n",
+      "Sampled Test Set Size: 2000\n"
+     ]
+    }
+   ],
    "source": [
+    "# Define the target variable\n",
+    "y = df['TotalPremium']\n",
+    "\n",
+    "# Define features (exclude the target variable and any non-feature columns)\n",
+    "X = df.drop(columns=['TotalPremium'])\n",
+    "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Sample the training data for faster processing\n",
+    "X_train_sample = X_train.sample(n=10000, random_state=42)\n",
+    "y_train_sample = y_train.loc[X_train_sample.index]\n",
+    "\n",
+    "# The original test set is 20% of the data, we will take 20% of the original test set\n",
+    "test_sample_size = 2000\n",
+    "X_test_sample = X_test.sample(n=test_sample_size, random_state=42)\n",
+    "y_test_sample = y_test.loc[X_test_sample.index]\n",
+    "\n",
+    "# Check the sizes to confirm the ratios\n",
+    "print(f\"Original Data Size: {len(df)}\")\n",
+    "print(f\"Sampled Training Set Size: {len(X_train_sample)}\")  # Should be 10000\n",
+    "print(f\"Sampled Test Set Size: {len(X_test_sample)}\")  # Should be 2000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I tried to work using the whole dataset but it needs a large memory so I used sample training and testing datas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression MSE: 9.500976616544357\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "lr_model, lr_mse = linear_regression(X_train_sample, X_test_sample, y_train_sample, y_test_sample)\n",
+    "\n",
+    "# Print the Mean Squared Error\n",
+    "print(f\"Linear Regression MSE: {lr_mse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest MSE: 0.23318444707650912\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "rf_model, rf_mse = random_forest(X_train_sample, X_test_sample, y_train_sample, y_test_sample)\n",
+    "\n",
+    "# Print the rf Mean Squared Error\n",
+    "print(f\"Random Forest MSE: {rf_mse}\")"
    ]
   },
   {
@@ -94,7 +208,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linear_mse = linear_regression(X_train, X_test, y_train, y_test)"
+    "# Train the model\n",
+    "xgb_model, xgb_mse = xgboost_model(X_train_sample, X_test_sample, y_train_sample, y_test_sample)\n",
+    "\n",
+    "# Print the xgb Mean Squared Error\n",
+    "print(f\"XGBoost MSE: {xgb_mse}\")"
    ]
   }
  ],
